--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dayjs": "^1.11.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^4.0.3",
