--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "dotenv": "^16.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.3.0",
